2013-06-04 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/massive/massive_delete_alerts.php: fixed the delete
	alerts with same module.
	
	Fixes: #2272
	
	* include/functions_agents.php: erased unused function.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-06-04  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_groups.php
	operation/agentes/group_view.php: Delete status column
	and group image from groups view. Another visual fixes
	were done

2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_groups.php
	operation/events/events_list.php
	operation/agentes/group_view.php
	mobile/operation/agent.php
	mobile/operation/agents.php
	mobile/include/style/main.css
	general/logon_ok.php: Few visual fixes

2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	index.php: Fix footer layout merged from 4.1

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* mobile/include/style/main.css: fixed the list of modules in the
	main agent view.
	
	* mobile/operation/agent.php: improved the source code style.
	
	* mobile/operation/agents.php: fixed the PHP warnings.

2013-05-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Minor visual fix

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: avoid to characters and
	other shit that corrupts the image file.
	
	MERGED FROM THE BRANCH PANDORA_4

2013-05-30  Sergio Martin <sergio.martin@artica.es>

	* include/styles/menu.css
	include/styles/cluetip.css
	include/styles/pandora.css
	include/functions.php
	include/functions_events.php
	include/graphs/functions_gd.php
	include/functions_networkmap.php
	include/javascript/jquery.cluetip.js
	images/outof.png: Visual improvements

	* include/functions_treeview.php
	extensions/module_groups.php
	operation/tree.php
	operation/events/events.build_table.php
	operation/events/events_list.php