@@ -37,8 +37,10 @@ if (check_acl ($config['id_user'], 0, "AW") || check_acl ($config['id_user'], 0,
 		
 		enterprise_hook("duplicate_confi_submenu");
 		
-		if (check_acl ($config["id_user"], 0, "PM")) {
+		if (check_acl ($config["id_user"], 0, "AW")) {
 			$sub["godmode/groups/group_list"]["text"] = __('Manage groups');
+		}
+		if (check_acl ($config["id_user"], 0, "PM")) {
 			$sub["godmode/groups/modu_group_list"]["text"] = __('Module groups');
 			$sub["godmode/agentes/planned_downtime.list"]["text"] = __('Scheduled downtime');
 			$sub["godmode/agentes/fields_manager"]["text"] = __('Manage custom fields');
