@@ -1803,7 +1803,7 @@ function is_array_empty($InputVariable)
 // Return 0 if the user hasnt access to node/detail 1 otherwise
 function can_user_access_node () {
 	global $config;
-
+	
 	$userinfo = get_user_info ($config['id_user']);
 	
 	if (defined('METACONSOLE')) {	
